feature: 添加设置面板国际化

--- a/src/main/resources/i18n/info.properties
+++ b/src/main/resources/i18n/info.properties
@@ -1,3 +1,16 @@
+#setting panel
+setting.description=Personalize your git commit types and templates.
+setting.explainDescription=template  explain
+setting.typeExplainDescription=  ${type} corresponds to the submission menu 'Type of chang' 
+setting.subjectExplainDescription=  ${scope} corresponds to the submission menu 'Scope of this change'
+setting.bodyExplainDescription=  ${subject} corresponds to the submission menu 'Short description'
+setting.changesExplainDescription=  ${body} corresponds to the submission menu 'Long description'
+setting.closesExplainDescription=  ${changes} corresponds to the submission menu 'Breaking changes'
+setting.newLineExplainDescription=  ${closes} corresponds to the submission menu 'Closed issues'
+setting.settingTemplateDescription=  ${newLine} is  '\n', indicating whether to wrap the line
+# commit panel
+type.field=Type of Change
+# init git commit type description
 feature.description=A new feature
 fix.description=A bug fix
 docs.description=Documentation only changes
@@ -9,4 +22,3 @@ build.description=Changes that affect the build system or external dependencies 
 ci.description=Changes to our CI configuration files and scripts (example scopes: Travis, Circle, BrowserStack, SauceLabs)
 chore.description=Other changes that don't modify src or test files
 revert.description=Reverts a previous commit
-title=title
