--- a/src/main/resources/i18n/info_zh.properties
+++ b/src/main/resources/i18n/info_zh.properties
@@ -1,3 +1,22 @@
+#setting panel
+setting.description=个性化 git 提交类型和模版
+setting.explainDescription=模版解释
+setting.typeExplainDescription=  ${type} 对应提交菜单“提交类型”
+setting.subjectExplainDescription=  ${scope} 对应提交菜单“此次变更的范围”
+setting.bodyExplainDescription=  ${subject} 对应提交菜单“简短描述”
+setting.changesExplainDescription=  ${body} 对应提交菜单“详细描述”
+setting.closesExplainDescription=  ${changes} 对应提交菜单“重大变化”
+setting.newLineExplainDescription=  ${closes} 对应提交菜单“关闭问题”
+setting.settingTemplateDescription=  ${newLine} 是 '\n' 的转义字符，代表是否换行
+
+
+
+# commit panel
+type.field=更改类型
+
+
+
+# init git commit type description
 feature.description=新功能
 fix.description=错误修复
 docs.description=更改文档
@@ -9,4 +28,3 @@ build.description=构建依赖更改
 ci.description=更改 CI 配置文件或者脚本
 chore.description=改变构建流程、或者增加依赖库、工具等
 revert.description=代码回退
-title=标题
