feature: 添加设置面板国际化

--- a/src/main/resources/i18n/info.properties
+++ b/src/main/resources/i18n/info.properties
@@ -1,15 +1,21 @@
 #setting panel
 setting.description=Personalize your git commit types and templates.
 setting.explainDescription=template  explain
-setting.typeExplainDescription=  ${type} corresponds to the submission menu 'Type of chang' 
-setting.subjectExplainDescription=  ${scope} corresponds to the submission menu 'Scope of this change'
-setting.bodyExplainDescription=  ${subject} corresponds to the submission menu 'Short description'
-setting.changesExplainDescription=  ${body} corresponds to the submission menu 'Long description'
-setting.closesExplainDescription=  ${changes} corresponds to the submission menu 'Breaking changes'
-setting.newLineExplainDescription=  ${closes} corresponds to the submission menu 'Closed issues'
-setting.settingTemplateDescription=  ${newLine} is  '\n', indicating whether to wrap the line
+setting.typeExplainDescription=${type} corresponds to the submission menu 'Type of chang'
+setting.scopeExplainDescription=${scope} corresponds to the submission menu 'Scope of this change'
+setting.subjectExplainDescription=${subject} corresponds to the submission menu 'Short description'
+setting.bodyExplainDescription=${body} corresponds to the submission menu 'Long description'
+setting.changesExplainDescription=${changes} corresponds to the submission menu 'Breaking changes'
+setting.closesExplainDescription=${closes} corresponds to the submission menu 'Closed issues'
+setting.newLineExplainDescription=${newLine} is  '\n', indicating whether to wrap the line
+setting.settingTemplateDescription=setting  git commit template
 # commit panel
-type.field=Type of Change
+commit.type.field=Type of Change
+commit.scope.field=Scope of this change
+commit.subject.field=Short Description
+commit.body.field=Long Description
+commit.changes.field=Breaking Changes
+commit.closes.field=Closed Issues
 # init git commit type description
 feature.description=A new feature
 fix.description=A bug fix
