feature: 完善国际化

--- a/src/main/resources/i18n/info.properties
+++ b/src/main/resources/i18n/info.properties
@@ -7,7 +7,7 @@ setting.subjectExplainDescription=${subject} corresponds to the submission menu 
 setting.bodyExplainDescription=${body} corresponds to the submission menu 'Long description'
 setting.changesExplainDescription=${changes} corresponds to the submission menu 'Breaking changes'
 setting.closesExplainDescription=${closes} corresponds to the submission menu 'Closed issues'
-setting.newLineExplainDescription=${newLine} is  '\n', indicating whether to wrap the line
+setting.newLineExplainDescription=${newLine} is  '\\n', indicating whether to wrap the line
 setting.settingTemplateDescription=setting  git commit template
 # commit panel
 commit.type.field=Type of Change
