--- a/src/main/resources/i18n/info_zh.properties
+++ b/src/main/resources/i18n/info_zh.properties
@@ -1,13 +1,13 @@
 #setting panel
 setting.description=个性化 git 提交类型和模版
-setting.explainDescription=模版解释
+setting.explainDescription=模版说明
 setting.typeExplainDescription=${type} 对应提交菜单“提交类型”
 setting.scopeExplainDescription=${scope} 对应提交菜单“此次变更的范围”
 setting.subjectExplainDescription=${subject} 对应提交菜单“简短描述”
 setting.bodyExplainDescription=${body} 对应提交菜单“详细描述”
 setting.changesExplainDescription=${changes} 对应提交菜单“重大变更”
 setting.closesExplainDescription=${closes} 对应提交菜单“关闭问题”
-setting.newLineExplainDescription=${newLine} 是 '\n' 的转义字符，代表是否换行
+setting.newLineExplainDescription=${newLine} 是 '\\n' 的转义字符，代表是否换行
 setting.settingTemplateDescription=设置 git 提交模版
 # commit panel
 commit.type.field=更改类型
