feature: 国际化持续优化并加入消息缓存

--- a/src/main/resources/i18n/info.properties
+++ b/src/main/resources/i18n/info.properties
@@ -1,4 +1,4 @@
-#setting panel
+# setting panel
 setting.description=Personalize your git commit types and templates.
 setting.explainDescription=template  explain
 setting.typeExplainDescription=${type} corresponds to the submission menu 'Type of chang'
@@ -9,6 +9,14 @@ setting.changesExplainDescription=${changes} corresponds to the submission menu 
 setting.closesExplainDescription=${closes} corresponds to the submission menu 'Closed issues'
 setting.newLineExplainDescription=${newLine} is  '\\n', indicating whether to wrap the line
 setting.settingTemplateDescription=setting  git commit template
+# setting TabbedPane
+setting.type.panel.title=Type
+setting.template.panel.title=Template
+# setting alias panel
+setting.alias.add.title=Add Type
+setting.alias.edit.title=Edit Type
+setting.alias.field.title=title
+setting.alias.field.description=description
 # commit panel
 commit.type.field=Type of Change
 commit.scope.field=Scope of this change
@@ -16,6 +24,9 @@ commit.subject.field=Short Description
 commit.body.field=Long Description
 commit.changes.field=Breaking Changes
 commit.closes.field=Closed Issues
+commit.title=Commit
+commit.ok.button=OK
+commit.cancel.button=Cancel
 # init git commit type description
 feature.description=A new feature
 fix.description=A bug fix
