--- a/src/main/resources/i18n/info_zh.properties
+++ b/src/main/resources/i18n/info_zh.properties
@@ -1,32 +1,38 @@
-#setting panel
+# setting panel
 setting.description=个性化 git 提交类型和模版
-setting.explainDescription=模版说明
-setting.typeExplainDescription=${type} 对应提交菜单“提交类型”
-setting.scopeExplainDescription=${scope} 对应提交菜单“此次变更的范围”
-setting.subjectExplainDescription=${subject} 对应提交菜单“简短描述”
-setting.bodyExplainDescription=${body} 对应提交菜单“详细描述”
-setting.changesExplainDescription=${changes} 对应提交菜单“重大变更”
-setting.closesExplainDescription=${closes} 对应提交菜单“关闭问题”
-setting.newLineExplainDescription=${newLine} 是 '\\n' 的转义字符，代表是否换行
-setting.settingTemplateDescription=设置 git 提交模版
-# setting TabbedPane
-setting.type.panel.title=类型
-setting.template.panel.title=模版
+# setting tabbed
+setting.tabbed.panel.type=类型
+setting.tabbed.panel.template=模版
+# setting template panel
+setting.template.description=模版说明
+setting.template.preview=预览
+setting.template.edit=设置 git 提交模版
+# setting template description
+setting.template.description.tip=在文件模板中，可以使用文本、代码、注释和预定义的变量<br>以下提供了预定义变量的列表
+setting.template.description.predefined.tip=预定义变量列表如下:
+setting.template.type=对应提交菜单“提交类型”
+setting.template.scope=对应提交菜单“此次变更的范围”
+setting.template.subject=对应提交菜单“简短描述”
+setting.template.body=对应提交菜单“详细描述”
+setting.template.changes=对应提交菜单“重大变更”
+setting.template.closes=对应提交菜单“关闭问题”
+setting.template.newLine='\\n' 的转义字符，代表是否换行
+setting.template.used=模版已使用
 # setting alias panel
 setting.alias.add.title=新增类型
 setting.alias.edit.title=修改类型
 setting.alias.field.title=类型
 setting.alias.field.description=描述
 # commit panel
-commit.type.field=更改类型
-commit.scope.field=此次变更的范围
-commit.subject.field=简短描述
-commit.body.field=详细描述
-commit.changes.field=重大变更
-commit.closes.field=关闭问题
-commit.title=提交
-commit.ok.button=提交
-commit.cancel.button=取消
+commit.panel.type.field=更改类型
+commit.panel.scope.field=此次变更的范围
+commit.panel.subject.field=简短描述
+commit.panel.body.field=详细描述
+commit.panel.changes.field=重大变更
+commit.panel.closes.field=关闭问题
+commit.panel.title=提交
+commit.panel.ok.button=提交
+commit.panel.cancel.button=取消
 # init git commit type description
 feature.description=新功能
 fix.description=错误修复
