--- a/src/main/resources/i18n/info_en.properties
+++ b/src/main/resources/i18n/info_en.properties
@@ -1,32 +1,38 @@
 # setting panel
 setting.description=Personalize your git commit types and templates.
-setting.explainDescription=template  explain
-setting.typeExplainDescription=${type} corresponds to the submission menu 'Type of chang'
-setting.scopeExplainDescription=${scope} corresponds to the submission menu 'Scope of this change'
-setting.subjectExplainDescription=${subject} corresponds to the submission menu 'Short description'
-setting.bodyExplainDescription=${body} corresponds to the submission menu 'Long description'
-setting.changesExplainDescription=${changes} corresponds to the submission menu 'Breaking changes'
-setting.closesExplainDescription=${closes} corresponds to the submission menu 'Closed issues'
-setting.newLineExplainDescription=${newLine} is  '\\n', indicating whether to wrap the line
-setting.settingTemplateDescription=setting  git commit template
-# setting TabbedPane
-setting.type.panel.title=Type
-setting.template.panel.title=Template
+# setting tabbed
+setting.tabbed.panel.type=Type
+setting.tabbed.panel.template=Template
+# setting template panel
+setting.template.description=Description
+setting.template.preview=Preview
+setting.template.edit=Setting commit template
+# setting template description
+setting.template.description.tip=In file templates, you can use text, code, comments, and predefined variables. <br>The following provides a list of predefined variables.
+setting.template.description.predefined.tip=Predefined variables take the following values:
+setting.template.type=Corresponds to the submission menu 'Type of chang'
+setting.template.scope=Corresponds to the submission menu 'Scope of this change'
+setting.template.subject=Corresponds to the submission menu 'Short description'
+setting.template.body=Corresponds to the submission menu 'Long description'
+setting.template.changes=Corresponds to the submission menu 'Breaking changes'
+setting.template.closes=Corresponds to the submission menu 'Closed issues'
+setting.template.newLine='\\n', indicating whether to wrap the line
+setting.template.used=template language is used
 # setting alias panel
 setting.alias.add.title=Add Type
 setting.alias.edit.title=Edit Type
 setting.alias.field.title=title
 setting.alias.field.description=description
 # commit panel
-commit.type.field=Type of Change
-commit.scope.field=Scope of this change
-commit.subject.field=Short Description
-commit.body.field=Long Description
-commit.changes.field=Breaking Changes
-commit.closes.field=Closed Issues
-commit.title=Commit
-commit.ok.button=OK
-commit.cancel.button=Cancel
+commit.panel.type.field=Type of Change
+commit.panel.scope.field=Scope of this change
+commit.panel.subject.field=Short Description
+commit.panel.body.field=Long Description
+commit.panel.changes.field=Breaking Changes
+commit.panel.closes.field=Closed Issues
+commit.panel.title=Commit
+commit.panel.ok.button=OK
+commit.panel.cancel.button=Cancel
 # init git commit type description
 feature.description=A new feature
 fix.description=A bug fix
