feature: 模版描述国际化以及设置菜单国际化

--- a/src/main/resources/i18n/info.properties
+++ b/src/main/resources/i18n/info.properties
@@ -1,3 +1,5 @@
+# setting configurable
+setting.configurable.template=Commit Template
 # setting panel
 setting.description=Personalize your git commit types and templates.
 # setting tabbed
@@ -6,7 +8,7 @@ setting.tabbed.panel.template=Template
 # setting template panel
 setting.template.description=Description
 setting.template.preview=Preview
-setting.template.edit=Setting commit template
+setting.template.edit=Setting Commit Template
 # setting template description
 setting.template.description.tip=In file templates, you can use text, code, comments, and predefined variables. <br>The following provides a list of predefined variables.
 setting.template.description.predefined.tip=Predefined variables take the following values:
@@ -16,7 +18,7 @@ setting.template.subject=Corresponds to the submission menu 'Short description'
 setting.template.body=Corresponds to the submission menu 'Long description'
 setting.template.changes=Corresponds to the submission menu 'Breaking changes'
 setting.template.closes=Corresponds to the submission menu 'Closed issues'
-setting.template.newLine='\\n', indicating whether to wrap the line
+setting.template.newLine='\n', indicating whether to wrap the line
 setting.template.used=template language is used
 # setting alias panel
 setting.alias.add.title=Add Type
