--- a/src/main/resources/i18n/info_zh.properties
+++ b/src/main/resources/i18n/info_zh.properties
@@ -1,3 +1,5 @@
+# setting configurable
+setting.configurable.template=提交模版
 # setting panel
 setting.description=个性化 git 提交类型和模版
 # setting tabbed
@@ -16,7 +18,7 @@ setting.template.subject=对应提交菜单“简短描述”
 setting.template.body=对应提交菜单“详细描述”
 setting.template.changes=对应提交菜单“重大变更”
 setting.template.closes=对应提交菜单“关闭问题”
-setting.template.newLine='\\n' 的转义字符，代表是否换行
+setting.template.newLine='\n' 的转义字符，代表是否换行
 setting.template.used=模版已使用
 # setting alias panel
 setting.alias.add.title=新增类型
