--- a/src/main/resources/i18n/info_zh.properties
+++ b/src/main/resources/i18n/info_zh.properties
@@ -1,14 +1,26 @@
 # setting configurable
 setting.configurable.template=提交模版
-# setting panel
-setting.description=个性化 git 提交类型和模版
-# setting tabbed
-setting.tabbed.panel.type=类型
-setting.tabbed.panel.template=模版
+# setting central panel
+setting.central.type.panel.title=Type 显示样式设置
+setting.central.type.style=Type显示样式:
+setting.central.type.number=Type选择模式显示数量:
+setting.central.type.dropdown.button=下拉
+setting.central.type.selection.button=选择
+setting.central.type.mixing.button=混合
+setting.central.skip.ci.panel.title=Skip CI 设置
+setting.central.skip.ci.enable.default=默认值:
+setting.central.skip.ci.enable.selection=开启下拉:
+setting.central.skip.ci.enable.checkbox=开启
+setting.central.skip.ci.default.checked.checkbox=默认勾选
+setting.central.hidden.panel.title=显示设置
 # setting template panel
+setting.description=个性化 git 提交类型和模版
 setting.template.description=模版说明
 setting.template.preview=预览
 setting.template.edit=设置 git 提交模版
+# setting tabbed
+setting.tabbed.panel.type=类型
+setting.tabbed.panel.template=模版
 # setting template description
 setting.template.description.tip=在文件模板中，可以使用文本、代码、注释和预定义的变量<br>以下提供了预定义变量的列表
 setting.template.description.predefined.tip=预定义变量列表如下:
@@ -36,7 +48,7 @@ commit.panel.title=提交
 commit.panel.ok.button=提交
 commit.panel.cancel.button=取消
 # init git commit type description
-feature.description=新功能
+feat.description=新功能
 fix.description=错误修复
 docs.description=修改文档
 style.description=格式修改（不影响功能，例如空格、分号等格式修正）
