--- a/src/main/resources/i18n/info_en.properties
+++ b/src/main/resources/i18n/info_en.properties
@@ -1,14 +1,26 @@
 # setting configurable
 setting.configurable.template=Commit Template
-# setting panel
-setting.description=Personalize your git commit types and templates.
-# setting tabbed
-setting.tabbed.panel.type=Type
-setting.tabbed.panel.template=Template
+# setting central panel
+setting.central.type.panel.title=Type Display Style Option
+setting.central.type.style=Type Display Style:
+setting.central.type.number=Type Display Number:
+setting.central.type.dropdown.button=Dropdown
+setting.central.type.selection.button=Selection
+setting.central.type.mixing.button=Mixing
+setting.central.skip.ci.panel.title=Skip CI Option
+setting.central.skip.ci.enable.default=Default Value:
+setting.central.skip.ci.enable.selection=Enable Selection:
+setting.central.skip.ci.enable.checkbox=Enable
+setting.central.skip.ci.default.checked.checkbox=Default checked
+setting.central.hidden.panel.title=Hidden Option
 # setting template panel
+setting.description=Personalize your git commit types and templates.
 setting.template.description=Description
 setting.template.preview=Preview
 setting.template.edit=Setting Commit Template
+# setting template panel tabbed
+setting.tabbed.panel.type=Type
+setting.tabbed.panel.template=Template
 # setting template description
 setting.template.description.tip=In file templates, you can use text, code, comments, and predefined variables. <br>The following provides a list of predefined variables.
 setting.template.description.predefined.tip=Predefined variables take the following values:
@@ -36,7 +48,7 @@ commit.panel.title=Commit
 commit.panel.ok.button=OK
 commit.panel.cancel.button=Cancel
 # init git commit type description
-feature.description=A new feature
+feat.description=A new feature
 fix.description=A bug fix
 docs.description=Documentation only changes
 style.description=Changes that do not affect the meaning of the code (white-space, formatting, missing semi-colons, etc)
