--- a/src/main/resources/i18n/info_en.properties
+++ b/src/main/resources/i18n/info_en.properties
@@ -4,12 +4,12 @@ setting.configurable.template=Commit Template
 setting.central.type.panel.title=Type Display Style Option
 setting.central.type.style=Type Display Style:
 setting.central.type.number=Type Display Number:
-setting.central.type.dropdown.button=Dropdown
-setting.central.type.selection.button=Selection
+setting.central.type.dropdown.button=Checkbox
+setting.central.type.selection.button=Radio
 setting.central.type.mixing.button=Mixing
 setting.central.skip.ci.panel.title=Skip CI Option
 setting.central.skip.ci.enable.default=Default Value:
-setting.central.skip.ci.enable.selection=Enable Selection:
+setting.central.skip.ci.enable.selection=Enable Checkbox:
 setting.central.skip.ci.enable.checkbox=Enable
 setting.central.skip.ci.default.checked.checkbox=Default checked
 setting.central.hidden.panel.title=Hidden Option
