feature: 完善skip ci 逻辑

--- a/src/main/resources/i18n/info_en.properties
+++ b/src/main/resources/i18n/info_en.properties
@@ -4,7 +4,7 @@ setting.configurable.template=Commit Template
 setting.central.type.panel.title=Type Display Style Option
 setting.central.type.style=Type Display Style:
 setting.central.type.number=Type Display Number:
-setting.central.type.dropdown.button=Checkbox
+setting.central.type.dropdown.button=Combobox
 setting.central.type.selection.button=Radio
 setting.central.type.mixing.button=Mixing
 setting.central.skip.ci.panel.title=Skip CI Option
@@ -24,26 +24,28 @@ setting.tabbed.panel.template=Template
 # setting template description
 setting.template.description.tip=In file templates, you can use text, code, comments, and predefined variables. <br>The following provides a list of predefined variables.
 setting.template.description.predefined.tip=Predefined variables take the following values:
-setting.template.type=Corresponds to the submission menu 'Type of chang'
-setting.template.scope=Corresponds to the submission menu 'Scope of this change'
-setting.template.subject=Corresponds to the submission menu 'Short description'
-setting.template.body=Corresponds to the submission menu 'Long description'
-setting.template.changes=Corresponds to the submission menu 'Breaking changes'
-setting.template.closes=Corresponds to the submission menu 'Closed issues'
-setting.template.newLine='\n', indicating whether to wrap the line
-setting.template.used=template language is used
+setting.template.description.type=Corresponds to the submission menu 'Type of chang'
+setting.template.description.scope=Corresponds to the submission menu 'Scope of this change'
+setting.template.description.subject=Corresponds to the submission menu 'Short description'
+setting.template.description.body=Corresponds to the submission menu 'Long description'
+setting.template.description.changes=Corresponds to the submission menu 'Breaking changes'
+setting.template.description.closes=Corresponds to the submission menu 'Closed issues'
+setting.template.description.skip.ci=Corresponds to the submission menu 'Skip CI'
+setting.template.description.newLine='\n', indicating whether to wrap the line
+setting.template.description.used=template language is used
 # setting alias panel
 setting.alias.add.title=Add Type
 setting.alias.edit.title=Edit Type
 setting.alias.field.title=title
 setting.alias.field.description=description
 # commit panel
-commit.panel.type.field=Type of Change
-commit.panel.scope.field=Scope of this change
-commit.panel.subject.field=Short Description
-commit.panel.body.field=Long Description
-commit.panel.changes.field=Breaking Changes
-commit.panel.closes.field=Closed Issues
+commit.panel.type.field=Type of Change:
+commit.panel.scope.field=Scope of this change:
+commit.panel.subject.field=Short Description:
+commit.panel.body.field=Long Description:
+commit.panel.changes.field=Breaking Changes:
+commit.panel.closes.field=Closed Issues:
+commit.panel.skip.ci.checkbox=approve
 commit.panel.title=Commit
 commit.panel.ok.button=OK
 commit.panel.cancel.button=Cancel
