--- a/src/main/resources/i18n/info_zh.properties
+++ b/src/main/resources/i18n/info_zh.properties
@@ -24,26 +24,28 @@ setting.tabbed.panel.template=模版
 # setting template description
 setting.template.description.tip=在文件模板中，可以使用文本、代码、注释和预定义的变量<br>以下提供了预定义变量的列表
 setting.template.description.predefined.tip=预定义变量列表如下:
-setting.template.type=对应提交菜单“提交类型”
-setting.template.scope=对应提交菜单“此次变更的范围”
-setting.template.subject=对应提交菜单“简短描述”
-setting.template.body=对应提交菜单“详细描述”
-setting.template.changes=对应提交菜单“重大变更”
-setting.template.closes=对应提交菜单“关闭问题”
-setting.template.newLine='\n' 的转义字符，代表是否换行
-setting.template.used=模版已使用
+setting.template.description.type=对应提交菜单“提交类型”
+setting.template.description.scope=对应提交菜单“此次变更的范围”
+setting.template.description.subject=对应提交菜单“简短描述”
+setting.template.description.body=对应提交菜单“详细描述”
+setting.template.description.changes=对应提交菜单“重大变更”
+setting.template.description.closes=对应提交菜单“关闭问题”
+setting.template.description.skip.ci=对应提交菜单“Skip CI”
+setting.template.description.newLine='\n' 的转义字符，代表是否换行
+setting.template.description.used=模版已使用
 # setting alias panel
 setting.alias.add.title=新增类型
 setting.alias.edit.title=修改类型
 setting.alias.field.title=类型
 setting.alias.field.description=描述
 # commit panel
-commit.panel.type.field=更改类型
-commit.panel.scope.field=此次变更的范围
-commit.panel.subject.field=简短描述
-commit.panel.body.field=详细描述
-commit.panel.changes.field=重大变更
-commit.panel.closes.field=关闭问题
+commit.panel.type.field=更改类型:
+commit.panel.scope.field=此次变更的范围:
+commit.panel.subject.field=简短描述:
+commit.panel.body.field=详细描述:
+commit.panel.changes.field=重大变更:
+commit.panel.closes.field=关闭问题:
+commit.panel.skip.ci.checkbox=批准
 commit.panel.title=提交
 commit.panel.ok.button=提交
 commit.panel.cancel.button=取消
