--- a/src/main/resources/i18n/info.properties
+++ b/src/main/resources/i18n/info.properties
@@ -4,6 +4,7 @@ setting.configurable.template=Commit Template
 setting.central.type.panel.title=Type Display Style Option
 setting.central.type.style=Type Display Style:
 setting.central.type.number=Type Display Number:
+setting.central.type.number.tooltip=Set to -1 to display all types
 setting.central.type.dropdown.button=Combobox
 setting.central.type.selection.button=Radio
 setting.central.type.mixing.button=Mixing
