--- a/src/main/resources/i18n/info_zh.properties
+++ b/src/main/resources/i18n/info_zh.properties
@@ -4,6 +4,7 @@ setting.configurable.template=提交模版
 setting.central.type.panel.title=Type 显示样式设置
 setting.central.type.style=Type显示样式:
 setting.central.type.number=Type选择模式显示数量:
+setting.central.type.number.tooltip=设置-1可以显示所有type
 setting.central.type.dropdown.button=下拉
 setting.central.type.selection.button=选择
 setting.central.type.mixing.button=混合
