--- a/src/main/resources/i18n/info_en.properties
+++ b/src/main/resources/i18n/info_en.properties
@@ -5,8 +5,8 @@ setting.central.type.panel.title=Type Display Style Option
 setting.central.type.style=Type Display Style:
 setting.central.type.number=Type Display Number:
 setting.central.type.number.tooltip=Set to -1 to display all types
-setting.central.type.dropdown.button=Combobox
-setting.central.type.selection.button=Radio
+setting.central.type.combobox.button=Combobox
+setting.central.type.radio.button=Radio
 setting.central.type.mixing.button=Mixing
 setting.central.skip.ci.panel.title=Skip CI Option
 setting.central.skip.ci.enable.default=Default Value:
@@ -16,9 +16,10 @@ setting.central.skip.ci.default.checked.checkbox=Default checked
 setting.central.hidden.panel.title=Hidden Option
 # setting template panel
 setting.description=Personalize your git commit types and templates.
-setting.template.description=Description
-setting.template.preview=Preview
-setting.template.edit=Setting Commit Template
+setting.template.description=Description:
+setting.template.preview=Preview:
+setting.template.edit=Setting Commit Template:
+setting.template.restore.defaults=Restore defaults
 # setting template panel tabbed
 setting.tabbed.panel.type=Type
 setting.tabbed.panel.template=Template
