🐛fix: 翻译问题修复

--- a/src/main/resources/i18n/info_en.properties
+++ b/src/main/resources/i18n/info_en.properties
@@ -10,9 +10,9 @@ setting.central.type.radio.button=Radio
 setting.central.type.mixing.button=Mixing
 setting.central.skip.ci.panel.title=Skip CI Option
 setting.central.skip.ci.enable.default=Default Value:
-setting.central.skip.ci.enable.selection=Enable Checkbox:
+setting.central.skip.ci.enable.selection=Enable combobox:
 setting.central.skip.ci.enable.checkbox=Enable
-setting.central.skip.ci.default.checked.checkbox=Default checked
+setting.central.skip.ci.default.checked.checkbox=Default approve
 setting.central.hidden.panel.title=Hidden Option
 # setting template panel
 setting.description=Personalize your git commit types and templates.
