--- a/src/main/resources/i18n/info_zh.properties
+++ b/src/main/resources/i18n/info_zh.properties
@@ -12,7 +12,7 @@ setting.central.skip.ci.panel.title=Skip CI 设置
 setting.central.skip.ci.enable.default=默认值:
 setting.central.skip.ci.enable.selection=开启下拉:
 setting.central.skip.ci.enable.checkbox=开启
-setting.central.skip.ci.default.checked.checkbox=默认勾选
+setting.central.skip.ci.default.checked.checkbox=默认批准
 setting.central.hidden.panel.title=隐藏设置
 # setting template panel
 setting.description=个性化 git 提交类型和模版
