🐛fix: 修复模版转换报错提示

--- a/src/main/resources/i18n/info.properties
+++ b/src/main/resources/i18n/info.properties
@@ -20,6 +20,7 @@ setting.template.description=Description:
 setting.template.preview=Preview:
 setting.template.edit=Setting Commit Template:
 setting.template.restore.defaults=Restore defaults
+setting.template.description.error=There is an issue with the commit template parsing. Please check your template
 # setting template panel tabbed
 setting.tabbed.panel.type=Type
 setting.tabbed.panel.template=Template
