--- a/src/main/resources/i18n/info_zh.properties
+++ b/src/main/resources/i18n/info_zh.properties
@@ -20,6 +20,7 @@ setting.template.description=模版说明:
 setting.template.preview=预览:
 setting.template.edit=设置 git 提交模版:
 setting.template.restore.defaults=重置为默认
+setting.template.description.error=Commit 模版解析出现问题，请检查您的模版
 # setting tabbed
 setting.tabbed.panel.type=类型
 setting.tabbed.panel.template=模版
