fix: 翻译问题修复
setting.template.description.type翻译修正
chang -> change

--- a/src/main/resources/i18n/info.properties
+++ b/src/main/resources/i18n/info.properties
@@ -27,7 +27,7 @@ setting.tabbed.panel.template=Template
 # setting template description
 setting.template.description.tip=In file templates, you can use text, code, comments, and predefined variables. <br>The following provides a list of predefined variables.
 setting.template.description.predefined.tip=Predefined variables take the following values:
-setting.template.description.type=Corresponds to the submission menu 'Type of chang'
+setting.template.description.type=Corresponds to the submission menu 'Type of change'
 setting.template.description.scope=Corresponds to the submission menu 'Scope of this change'
 setting.template.description.subject=Corresponds to the submission menu 'Short description'
 setting.template.description.body=Corresponds to the submission menu 'Long description'
